--- a/src/app/components/pages/login-page/login-page.component.html
+++ b/src/app/components/pages/login-page/login-page.component.html
@@ -54,6 +54,12 @@
       </div>
 
       <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Login' | translate }}</button>
+
+      <div style="text-align: center; margin: 10px 0;">
+        {{ 'Or login with' | translate }}
+      </div>
+
+      <sign-in-with (loadingChanged)="loadingChanged($event)"></sign-in-with>
     <div style="margin: 15px 0">
       {{ 'Or you can' | translate }} <a routerLink="/sign-up">{{ 'sign up here' | translate }}</a> {{ 'if you don\'t have an account.' | translate }}
     </div>
