Added login and signup page link to website

--- a/src/app/components/misc/app-title/app-title.component.html
+++ b/src/app/components/misc/app-title/app-title.component.html
@@ -1,5 +1,7 @@
 <div class="cont">
-  <img src="/assets/logo.svg" class="img" />
-  <span class="text">interes</span>
+  <a [href]="websiteUrl">
+    <img src="/assets/logo.svg" class="img" />
+    <span class="text">interes</span>
+  </a>
   <h5 style="margin-top: 20px; font-weight: bold;">{{ 'Dating by personality and interests.' | translate }}</h5>
 </div>
