--- a/src/app/components/misc/app-title/app-title.component.scss
+++ b/src/app/components/misc/app-title/app-title.component.scss
@@ -2,6 +2,10 @@
   text-align: center;
   margin-bottom: 40px;
   color: #fff;
+
+  a {
+    text-decoration: none;
+  }
 }
 .cont .img {
   width: 60px;
