Moved chat link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,10 +11,6 @@
         <a *ngIf="isActiveUser" class="header-item" [routerLink]="['/user/' + loggedUser().id]">
           <fa-icon class="primary-item" [icon]="faProfile" title="{{ 'My profile' | translate }}"></fa-icon>
         </a>
-        <a *ngIf="isActiveUser" class="header-item" routerLink="/chat" style="position: relative;" title="{{ 'Chat' | translate}}">
-          <fa-icon class="primary-item" [icon]="faEnvelope"></fa-icon>
-          <span *ngIf="notifsCount.msg > 0" class="badge rounded-pill bg-danger notif-badge">{{notifsCount.msg}}</span>
-        </a>
         <div class="btn-group">
           <a data-toggle="dropdown" class="header-item" style="width: 15px; cursor: pointer;">
             <fa-icon class="primary-item" [icon]="faEllipsisV"></fa-icon>
@@ -46,22 +42,27 @@
     <a routerLink="/likes" class="item">
       <fa-icon [icon]="faIntro"></fa-icon>
       <span class="label">{{ 'Likes' | translate }}</span>
-      <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.intro}}</span>
+      <span *ngIf="notifsCount.intro > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{ notifsCount.intro }}</span>
     </a>
     <a routerLink="/matches" class="item">
       <fa-icon [icon]="faMatch"></fa-icon>
       <span class="label">{{ 'Matches' | translate }}</span>
-      <span *ngIf="notifsCount.matches > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.matches}}</span>
+      <span *ngIf="notifsCount.matches > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{ notifsCount.matches }}</span>
+    </a>
+    <a routerLink="/chat" class="item">
+      <fa-icon [icon]="faEnvelope"></fa-icon>
+      <span class="label">{{ 'Messages' | translate }}</span>
+      <span *ngIf="notifsCount.msg > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{ notifsCount.msg }}</span>
     </a>
     <a routerLink="/views" class="item">
       <fa-icon [icon]="faViews"></fa-icon>
       <span class="label">{{ 'Views' | translate }}</span>
-      <span *ngIf="notifsCount.visits > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{notifsCount.visits}}</span>
+      <span *ngIf="notifsCount.visits > 0" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{ notifsCount.visits }}</span>
     </a>
     <a routerLink="/compatibilities" class="item">
       <fa-icon [icon]="faCompatibility"></fa-icon>
       <span class="label">{{ 'Compatibility' | translate }}</span>
-      <span *ngIf="compatibilityCount && 0 < compatibilityCount" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{compatibilityCount}}</span>
+      <span *ngIf="compatibilityCount && 0 < compatibilityCount" class="badge rounded-pill bg-danger" style="top: 3px; color: #fff; font-size: 11px; font-family: initial; font-weight: 800; position: absolute;">{{ compatibilityCount }}</span>
     </a>
   </div>
 </div>
